Minor Update Trik_Pandas_01.ipynb
Changed the "#4 Pandas 04 | Pemilihan Kolom (columns selection) pada Pandas Data Frame Berdasarkan Tipe Data" subheading
to "#04 Pemilihan Kolom (columns selection) pada Pandas Data Frame Berdasarkan Tipe Data".

--- a/Trik_Pandas_01.ipynb
+++ b/Trik_Pandas_01.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "299445e4",
+   "id": "4265dec0",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "603513bf",
+   "id": "bda48dda",
    "metadata": {},
    "source": [
     "# Title : Pandas 01"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1973e23b",
+   "id": "8a9fda59",
    "metadata": {},
    "source": [
     "#### \n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb9d2ad",
+   "id": "899d0446",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d2ebe48",
+   "id": "cd5347b5",
    "metadata": {},
    "source": [
     "Pandas adalah suatu library di Python yang paling populer untuk analisis data.\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab876cbf",
+   "id": "54737891",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6671b235",
+   "id": "cae159ef",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f87e85",
+   "id": "70c0870d",
    "metadata": {},
    "source": [
     "DataFrame adalah suatu objek 2 dimensi tempat menyimpan data dengan lebih terstruktur.\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9a65c181",
+   "id": "b4770180",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a60a7c",
+   "id": "8c70b31f",
    "metadata": {},
    "source": [
     "`DataFrame()` digunakan untuk membuat object data frame.\n",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fadcf9f2",
+   "id": "616ce15d",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf5592a",
+   "id": "41d22f3f",
    "metadata": {},
    "source": [
     "Jika fungsi tuple dikenakan pada sebuah string maka akan dihasilkan suatu tuple yang elemnya terdiri dari character-character yang membentuk string tersebut."
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a149429",
+   "id": "c4a70f8c",
    "metadata": {},
    "source": [
     "#### Menyertakan Prefix Kolom"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0285116e",
+   "id": "8154a961",
    "metadata": {},
    "source": [
     "Untuk menambahkan string di depan string (prefix) kita bisa menggunakan fungsi `add_prefix(string)`."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "052ad728",
+   "id": "f9e84e42",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fb78c2",
+   "id": "0ada1e53",
    "metadata": {},
    "source": [
     "#### Menyertakan Suffix Kolom"
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db85d5b6",
+   "id": "fb58f5e2",
    "metadata": {},
    "source": [
     "Lalu, untuk menambahkan string di belakang string (suffix) kita bisa menggunakan fungsi `add_suffix(string)`."
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ef22cee7",
+   "id": "d389b1b8",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a76efc",
+   "id": "823b4622",
    "metadata": {},
    "source": [
     "#### \n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cebd6b",
+   "id": "fec907e5",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918089fa",
+   "id": "ea2cc2cb",
    "metadata": {},
    "source": [
     "Untuk menggunakan library pandas kita harus meng-import pandas terlebih dahulu.\n",
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a606b18",
+   "id": "bb44940b",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f190d910",
+   "id": "d1688524",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e044c3c",
+   "id": "0380ced5",
    "metadata": {},
    "source": [
     "Perhatikan simple data frame berikut, dimana tipe datanya bertipe int semua."
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c10b089",
+   "id": "0f9a373d",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30768a10",
+   "id": "87848e1a",
    "metadata": {},
    "source": [
     "`dataframe()` digunakan untuk membuat object data frame.\n",
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fcd87f",
+   "id": "504f079a",
    "metadata": {},
    "source": [
     "#### Selection dengan Operator Logika `|`"
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f97e499",
+   "id": "b41b384c",
    "metadata": {},
    "source": [
     "Operator *or* disini direpresentasikan dengan menggunakan *pipe character*"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a3884da",
+   "id": "eddc4444",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4768a62",
+   "id": "e081cc5f",
    "metadata": {},
    "source": [
     "Kode tersebut akan menampilkan baris yang nilai kolom A-nya bernilai satu atau tiga."
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff38319",
+   "id": "77eb6d5a",
    "metadata": {},
    "source": [
     "#### Selection dengan Fungsi `isin()`"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e14b9d",
+   "id": "a9931551",
    "metadata": {},
    "source": [
     "Penyederhanaan fungsi `|` dengan fungsi `isin()`."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8f413056",
+   "id": "099f6077",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d572c55",
+   "id": "52abc5a8",
    "metadata": {},
    "source": [
     "#### Mengenal Operator Negasi `~`"
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e0785f",
+   "id": "f68bc7ee",
    "metadata": {},
    "source": [
     "Jika ingin menampilkan hasil inversinya/ *not* dapat menggunakan fungsi `~`.\n",
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ddda700",
+   "id": "83ea32d7",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd18894e",
+   "id": "30fd22e7",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b2f3d0",
+   "id": "d2047c69",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e6e1159",
+   "id": "d64447fe",
    "metadata": {},
    "source": [
     "Untuk menggunakan library pandas kita harus meng-import pandas terlebih dahulu.\n",
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d2cf2d03",
+   "id": "59950c1b",
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07cc73ac",
+   "id": "65c3f7d9",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd34f55",
+   "id": "15d1c21d",
    "metadata": {},
    "source": [
     "Data Frame dibawah ini dibuat dengan menggunakan *dictionary* (key : values) dan *list*.\n",
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0455342c",
+   "id": "5cd52afd",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929a8786",
+   "id": "94876eb3",
    "metadata": {},
    "source": [
     "Untuk mengetahui tipe datanya kita bisa menggunakan `dtypes`."
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7a394fc2",
+   "id": "36f59bad",
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d480b2eb",
+   "id": "c42ccd0d",
    "metadata": {},
    "source": [
     "#### Konversi Tipe Data dengan Fungsi `astype()`"
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2c40d2",
+   "id": "d230844c",
    "metadata": {},
    "source": [
     "untuk mengubah tipe data col2 (string) menjadi int dapat memanfaatkan fungsi `astype()`.\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "286e5b89",
+   "id": "a602b1ff",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5711af23",
+   "id": "850e641f",
    "metadata": {},
    "source": [
     "Saat kode diatas dijalankan memang tidak terlalu terlihat perbedaanya.\n",
@@ -1324,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d70bd799",
+   "id": "bd47a6fc",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de6c28a4",
+   "id": "7c1bc89a",
    "metadata": {},
    "source": [
     "#### Konversi Tipe Data Numerik dengan Fungsi `to_numeric()`"
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce6b1a8",
+   "id": "2e44d39b",
    "metadata": {},
    "source": [
     "Untuk melakukan konversi keselurah kolom pada data frame ke tipe data numerik, kita bisa memanfaatkan fungsi to_numeric()."
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c369b397",
+   "id": "0eb6b014",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08f90d5",
+   "id": "f4570277",
    "metadata": {},
    "source": [
     "Fungsi `apply()` bertujuan untuk menerapkan fungsi di dalamnya ke data frame.\n",
@@ -1445,18 +1445,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6871f867",
+   "id": "dad92c2e",
    "metadata": {},
    "source": [
     "#### \n",
-    "### #4 Pandas 04 | Pemilihan Kolom (columns selection) pada Pandas Data Frame Berdasarkan Tipe Data\n",
+    "### #04 Pemilihan Kolom (columns selection) pada Pandas Data Frame Berdasarkan Tipe Data\n",
     "#### Source : https://youtu.be/mxHWi8FY0T4\n",
     "#### Date : 2021/09/15"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd4bb91f",
+   "id": "b5bb17d8",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9e9e096a",
+   "id": "67525b4f",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c25e5bb",
+   "id": "f6b2ed6d",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26062d00",
+   "id": "f7f4add3",
    "metadata": {},
    "source": [
     "Membuat object data frame yang diisi oleh bilangan int random dengan rentang 1-27.\n",
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "70342814",
+   "id": "71d09393",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5db65a0",
+   "id": "b9fda2e8",
    "metadata": {},
    "source": [
     "Untuk memastikan tipe datanya bisa menggunakan `dtypes`."
@@ -1632,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f63ea362",
+   "id": "938925be",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8eb2306",
+   "id": "f7742a56",
    "metadata": {},
    "source": [
     "#### Memilih Kolom Bertipe Data Numerik"
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7f8ee62a",
+   "id": "6a5af2b0",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d2890bb",
+   "id": "8fadeccb",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data numerik (int, float)saja"
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e44e99b9",
+   "id": "730653fe",
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade4a567",
+   "id": "ee1f7a5d",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data float saja"
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6d2fd6a6",
+   "id": "069cff94",
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fe9554",
+   "id": "5798485e",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data int saja"
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12e5a29",
+   "id": "e5042a02",
    "metadata": {},
    "source": [
     "#### Memilih Kolom Bertipe Data String atau Object"
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3d492325",
+   "id": "3a132b24",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ee4e500",
+   "id": "b08856d9",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data string (dipandang sebagai objek) saja"
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf5a5b3e",
+   "id": "adf9a659",
    "metadata": {},
    "source": [
     "#### Memilih Kolom Bertipe Data Datetime"
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "30fcffac",
+   "id": "f1597e40",
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c927c7",
+   "id": "bec67f8f",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data datetime saja"
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30118ad3",
+   "id": "baa09d85",
    "metadata": {},
    "source": [
     "#### Memilih Kolom dengan Kombinasi Tipe Data"
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "681b4567",
+   "id": "95ab953e",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da9ea05",
+   "id": "918f055c",
    "metadata": {},
    "source": [
     "Fungsi ini akan memilih kolom yang bertipe data gabungan dengan menggunakan list."
