Added the fourteenth trick
- ADD 'Menggabungkan dua Pandas Data Frame' tricks
    * Add 'Import Modules' points
    * Add 'Persiapan Data Frame' points
    * Add 'Menggabungkan Dua Data Frame' points

--- a/Trik_Pandas_04.ipynb
+++ b/Trik_Pandas_04.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8d7d094d",
+   "id": "6b482d6c",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a33a44b0",
+   "id": "a2ae7810",
    "metadata": {},
    "source": [
     "# Title: Pandas 04"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df883ce2",
+   "id": "5f272d1c",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073ba1e9",
+   "id": "96b72182",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "431d235f",
+   "id": "f541e1c5",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad752d1",
+   "id": "e750b117",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "62471488",
+   "id": "7d4d5660",
    "metadata": {},
    "outputs": [
     {
@@ -104,43 +104,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>84</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>58</td>\n",
+       "      <td>97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>94</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>96</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>56</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>56</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>60</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -148,16 +148,16 @@
       ],
       "text/plain": [
        "   usia\n",
-       "0    91\n",
-       "1    65\n",
-       "2    84\n",
-       "3    58\n",
-       "4    94\n",
-       "5     3\n",
-       "6    96\n",
-       "7    56\n",
-       "8    56\n",
-       "9    60"
+       "0    83\n",
+       "1    46\n",
+       "2    89\n",
+       "3    97\n",
+       "4     5\n",
+       "5    79\n",
+       "6    26\n",
+       "7    76\n",
+       "8    19\n",
+       "9     3"
       ]
      },
      "execution_count": 2,
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154935df",
+   "id": "2b7c70d5",
    "metadata": {},
    "source": [
     "#### Pengelompokkan nilai numerik ke dalam beberapa kategori menggunakan `cut()`"
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c71710b",
+   "id": "aed5d13b",
    "metadata": {},
    "source": [
     "- Membuat kolom baru bernama 'kelompok_usia'.\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d79d6d5",
+   "id": "4b4f5c8b",
    "metadata": {},
    "outputs": [
     {
@@ -230,53 +230,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>91</td>\n",
+       "      <td>83</td>\n",
        "      <td>manula</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65</td>\n",
+       "      <td>46</td>\n",
        "      <td>dewasa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>84</td>\n",
+       "      <td>89</td>\n",
        "      <td>manula</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>58</td>\n",
-       "      <td>dewasa</td>\n",
+       "      <td>97</td>\n",
+       "      <td>manula</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>94</td>\n",
-       "      <td>manula</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>anak</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>96</td>\n",
+       "      <th>5</th>\n",
+       "      <td>79</td>\n",
        "      <td>manula</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>56</td>\n",
+       "      <th>6</th>\n",
+       "      <td>26</td>\n",
        "      <td>dewasa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>76</td>\n",
+       "      <td>manula</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>56</td>\n",
+       "      <td>19</td>\n",
        "      <td>dewasa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>60</td>\n",
-       "      <td>dewasa</td>\n",
+       "      <td>3</td>\n",
+       "      <td>anak</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,16 +284,16 @@
       ],
       "text/plain": [
        "   usia kelompok_usia\n",
-       "0    91        manula\n",
-       "1    65        dewasa\n",
-       "2    84        manula\n",
-       "3    58        dewasa\n",
-       "4    94        manula\n",
-       "5     3          anak\n",
-       "6    96        manula\n",
-       "7    56        dewasa\n",
-       "8    56        dewasa\n",
-       "9    60        dewasa"
+       "0    83        manula\n",
+       "1    46        dewasa\n",
+       "2    89        manula\n",
+       "3    97        manula\n",
+       "4     5          anak\n",
+       "5    79        manula\n",
+       "6    26        dewasa\n",
+       "7    76        manula\n",
+       "8    19        dewasa\n",
+       "9     3          anak"
       ]
      },
      "execution_count": 3,
@@ -306,6 +306,508 @@
     "                             bins=[0, 18, 65, 99], # batas menggunakan list\n",
     "                             labels=['anak', 'dewasa', 'manula']) # pemberian label\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7ec345",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #14 Menggabungkan dua Pandas Data Frame\n",
+    "#### Source : https://youtu.be/kNaEWgZksZk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29b2db48",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9c07102f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Cek Versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5ccd7ef",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "55178614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "0  16   7  14   6   1\n",
+       "1   9   4   6   9   5\n",
+       "2  10  13  14   5  12\n",
+       "3   2  17  12  17  10\n",
+       "4   6  14   6  18   8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 5\n",
+    "n_cols = 5\n",
+    "cols = tuple('ABCDE')\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1, 20, size=(n_rows, n_cols)), \n",
+    "                  columns=cols)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4050bc3",
+   "metadata": {},
+   "source": [
+    "- Membagi dataframe yang telah dibuat menjadi 2 bagian, untuk kita gabungkan kembali"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9d09611e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "0  16   7  14   6   1\n",
+       "2  10  13  14   5  12\n",
+       "3   2  17  12  17  10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df.copy(deep=True)\n",
+    "df1 = df1.drop([1, 4]) # menghilangkan baris 1 dan 4\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ff95ea22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "1   9   4   6   9   5\n",
+       "2  10  13  14   5  12\n",
+       "4   6  14   6  18   8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.copy(deep=True)\n",
+    "df2 = df2.drop([0, 3]) # menghilangkan baris 0 dan 3\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d36a565",
+   "metadata": {},
+   "source": [
+    "#### Menggabungkan Dua Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a47dcc5a",
+   "metadata": {},
+   "source": [
+    "- Dua cara yang akan kita gunakan untuk fungsi `merge()` yaitu secara inner dan outer.\n",
+    "- Jika mengatur parameter ke-3, yaitu: how, menjadi inner. Itu akan menghasilkan irisn dari dataframe yang kita pilih.\n",
+    "- Namun, jika kita mengatur parameter tersebut menjadi outer, itu akan menghasilkan gabungan dari data frame yang kita pilih.\n",
+    "- Perlu diingat indeks pada gabungan data frame akan dibuat ulang."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "109252c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C  D   E\n",
+       "0  10  13  14  5  12"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_inner = pd.merge(df1, df2, how='inner')\n",
+    "df_inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f4da2dd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "0  16   7  14   6   1\n",
+       "1  10  13  14   5  12\n",
+       "2   2  17  12  17  10\n",
+       "3   9   4   6   9   5\n",
+       "4   6  14   6  18   8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_outer = pd.merge(df1, df2, how='outer')\n",
+    "df_outer"
    ]
   }
  ],
