--- a/Trik_Pandas_06.ipynb
+++ b/Trik_Pandas_06.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e1731bed",
+   "id": "2e0fce79",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76830060",
+   "id": "7a7092b2",
    "metadata": {},
    "source": [
     "# Title: Pandas 06"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be864641",
+   "id": "376b933c",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378995f6",
+   "id": "e24701f3",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d97576fb",
+   "id": "f4f10db3",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c832113f",
+   "id": "23377617",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b79380",
+   "id": "dd02394a",
    "metadata": {},
    "source": [
     "- Mengadopsi iris dataset kedalam data frame *df*."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1094a349",
+   "id": "3437a11c",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a585efb",
+   "id": "3dd30030",
    "metadata": {},
    "source": [
     "#### Mengenal `groupby()` dan Fungsi Agregasi"
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "933e2c7d",
+   "id": "db06fc5f",
    "metadata": {},
    "source": [
     "- Fungsi agregasi adalah fungsi yang dikenakan pada sekelompok data dan erat kaitannya dengan pengelompokkan data groupby.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8627c75",
+   "id": "bd213ae3",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d83f6c28",
+   "id": "8b4bdfa4",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e29279f5",
+   "id": "c2d2e737",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b5b722",
+   "id": "9d44ed47",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `agg()`"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed59d2f3",
+   "id": "59da731b",
    "metadata": {},
    "source": [
     "- Untuk melewatkan ke-3 fungsi agregasi sekaligus kita dapat menggunakan fungsi `agg()`, seperti kode dibawah ini."
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dd277d90",
+   "id": "c5b658e6",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fdde11a",
+   "id": "12063a52",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `describe()`"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f39320",
+   "id": "c6ec9716",
    "metadata": {},
    "source": [
     "- Fungsi `describe()` digunakan untuk menampilkan data statistik."
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "85510f02",
+   "id": "126e8c6d",
    "metadata": {},
    "outputs": [
     {
@@ -688,6 +688,465 @@
    ],
    "source": [
     "df.groupby('Species')['PetalLengthCm'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61aa90ec",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #22 Memantau Penggunaan Memory pada Data Frame\n",
+    "#### Source : https://youtu.be/vGi7Pk9AITw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f3f858",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fbb17330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b8361c",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef5a23f4",
+   "metadata": {},
+   "source": [
+    "- Mengadopsi titanic dataset dan iris dataset kedalam dataframe *df*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "358e903f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
+       "      <td>female</td>\n",
+       "      <td>29.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24160</td>\n",
+       "      <td>211.3375</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allison, Master. Hudson Trevor</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Miss. Helen Loraine</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>113781</td>\n",
+       "      <td>151.5500</td>\n",
+       "      <td>C22 C26</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pclass  survived                                             name     sex  \\\n",
+       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
+       "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
+       "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
+       "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
+       "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
+       "\n",
+       "     age  sibsp  parch  ticket      fare    cabin embarked  \n",
+       "0  29.00      0      0   24160  211.3375       B5        S  \n",
+       "1   0.92      1      2  113781  151.5500  C22 C26        S  \n",
+       "2   2.00      1      2  113781  151.5500  C22 C26        S  \n",
+       "3  30.00      1      2  113781  151.5500  C22 C26        S  \n",
+       "4  25.00      1      2  113781  151.5500  C22 C26        S  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_titanic = pd.read_csv('./data/titanicfull.csv')\n",
+    "df_titanic.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8ecf52b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>SepalLengthCm</th>\n",
+       "      <th>SepalWidthCm</th>\n",
+       "      <th>PetalLengthCm</th>\n",
+       "      <th>PetalWidthCm</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id  SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm      Species\n",
+       "0   1            5.1           3.5            1.4           0.2  Iris-setosa\n",
+       "1   2            4.9           3.0            1.4           0.2  Iris-setosa\n",
+       "2   3            4.7           3.2            1.3           0.2  Iris-setosa\n",
+       "3   4            4.6           3.1            1.5           0.2  Iris-setosa\n",
+       "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_iris = pd.read_csv('./data/Iris.csv')\n",
+    "df_iris.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "487fdc4f",
+   "metadata": {},
+   "source": [
+    "#### Memantau Penggunaan Memory Suatu Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b1cebee",
+   "metadata": {},
+   "source": [
+    "- Untuk membandingkan penggunaan kedua memory kita bisa menggunakan fungsi `info()` dan parameter nya diisikan value 'deep'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6edff741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1309 entries, 0 to 1308\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   pclass    1309 non-null   int64  \n",
+      " 1   survived  1309 non-null   int64  \n",
+      " 2   name      1309 non-null   object \n",
+      " 3   sex       1309 non-null   object \n",
+      " 4   age       1046 non-null   float64\n",
+      " 5   sibsp     1309 non-null   int64  \n",
+      " 6   parch     1309 non-null   int64  \n",
+      " 7   ticket    1309 non-null   object \n",
+      " 8   fare      1308 non-null   float64\n",
+      " 9   cabin     295 non-null    object \n",
+      " 10  embarked  1307 non-null   object \n",
+      "dtypes: float64(2), int64(4), object(5)\n",
+      "memory usage: 452.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_titanic.info(memory_usage='deep')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "998f4cad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 150 entries, 0 to 149\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Id             150 non-null    int64  \n",
+      " 1   SepalLengthCm  150 non-null    float64\n",
+      " 2   SepalWidthCm   150 non-null    float64\n",
+      " 3   PetalLengthCm  150 non-null    float64\n",
+      " 4   PetalWidthCm   150 non-null    float64\n",
+      " 5   Species        150 non-null    object \n",
+      "dtypes: float64(4), int64(1), object(1)\n",
+      "memory usage: 16.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_iris.info(memory_usage='deep')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0740b3c4",
+   "metadata": {},
+   "source": [
+    "#### Memantau Penggunaan Memory untuk Setiap Kolom dari Suatu Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a162a7f",
+   "metadata": {},
+   "source": [
+    "- Jika kita ingin memantau penggunaan memory tidak di tingkat dataframe, tetapi di tiap kolomnya kita bisa menggunakan fungsi `memory_usage()` dengan nilai deep = 'true'.\n",
+    "- Satuan dalam pemantauan ini adalah kb."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e643be03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index          128\n",
+       "pclass       10472\n",
+       "survived     10472\n",
+       "name        110127\n",
+       "sex          80781\n",
+       "age          10472\n",
+       "sibsp        10472\n",
+       "parch        10472\n",
+       "ticket       83502\n",
+       "fare         10472\n",
+       "cabin        50366\n",
+       "embarked     75870\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_titanic.memory_usage(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5edc21d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index              128\n",
+       "Id                1200\n",
+       "SepalLengthCm     1200\n",
+       "SepalWidthCm      1200\n",
+       "PetalLengthCm     1200\n",
+       "PetalWidthCm      1200\n",
+       "Species          10550\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_iris.memory_usage(deep=True)"
    ]
   }
  ],
